<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time2date</string>
    <string name="action_settings">Settings</string>
    
    <string name="imagebutton"> </string>
    <string name="textview"> </string>
    <string name="tvDay">ДНИ</string>
    <string name="tvHour">ЧАСЫ</string>
    <string name="tvMinute">МИНУТЫ</string>
    <string name="tvRezDay">00</string>
    <string name="tvRezHour">00</string>
    <string name="tvRezMinute">00</string>

</resources>
